# Courses_OOP

./: .gitignore  README.md  main.py  pyproject.toml
src/: hh_api.py  vacancy.py  vacancy_saver.py
tests/: conftest.py  test_hh_api.py  test_utils.py  test_vacancy.py  test_vacancy_saver.py
