[tool.poetry]
name = "courses-oop"
version = "0.1.0"
description = ""
authors = ["andranik <andranik2009@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
config = "^0.5.1"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
